--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3000
 API_TOKEN=super-secret-token
-GIT_REPO=https://github.com/your-username/your-repo.git
-GIT_BRANCH=main
+PROJECTS_PATH=/var/www/projects
+GIT_MAIN_BRANCH=main
 GIT_USER_NAME=Your Name
 GIT_USER_EMAIL=your@email.com
 GITHUB_TOKEN=ghp_...
