--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
-  "name": "__index",
+  "name": "Empty",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Empty branch for cloning",
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.4.1",
-  "dependencies": {
-    "body-parser": "^2.2.0",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "marked": "^16.1.2",
-    "simple-git": "^3.28.0"
-  }
+  "license": "ISC"
 }
