--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Empty",
   "version": "1.0.0",
-  "description": "Empty branch for cloning",
+  "description": "Empty branch for cloning.",
   "keywords": [],
   "author": "",
   "license": "ISC"
