--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Empty",
+  "name": "Empty branch",
   "version": "1.0.0",
   "description": "Empty branch for cloning.",
   "keywords": [],
