--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 PORT=3000
 API_TOKEN=super-secret-token
 PROJECTS_PATH=/var/www/projects
+PROJECTS_ROOT_URL=https://projects.do-code.com
 GIT_MAIN_BRANCH=main
-GIT_USER_NAME=Your Name
-GIT_USER_EMAIL=your@email.com
-GITHUB_TOKEN=ghp_...
