--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Empty branch",
+  "name": "Blur test",
   "version": "1.0.0",
-  "description": "Empty branch for cloning",
+  "description": "Test page for css blur filter",
   "keywords": [],
   "author": "",
   "license": "ISC"
